infra/modules/vm/main.tf
resource "azurerm_public_ip" "vm_ip" {
  name                = "${var.vm_name}-ip"
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = "Static"
  sku                 = "Standard"
}

resource "azurerm_network_interface" "nic" {
  name                = "${var.vm_name}-nic"
  location            = var.location
  resource_group_name = var.resource_group_name

  ip_configuration {
  name                          = "internal"
  subnet_id                     = var.subnet_id
  private_ip_address_allocation = "Dynamic"
  public_ip_address_id          = azurerm_public_ip.vm_ip.id
  }
}

resource "azurerm_linux_virtual_machine" "vm" {
  name                = var.vm_name
  location            = var.location
  resource_group_name = var.resource_group_name
  size                = "Standard_B2s"
  admin_username      = "abhi"
  admin_password      = "Abhi@2020"
  disable_password_authentication = false

  network_interface_ids = [azurerm_network_interface.nic.id]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-focal"
    sku       = "20_04-lts"
    version   = "latest"
  }
  
  provisioner "remote-exec" {
    connection {
      type        = "ssh"
      host        = azurerm_public_ip.vm_ip.ip_address
      user        = "abhi"
      password    = "Abhi@2020"
      timeout     = "5m"
    }

    inline = [
      "sudo apt update -y",
      "sudo apt install -y curl wget git apt-transport-https ca-certificates software-properties-common",
      "curl -fsSL https://get.docker.com | sudo bash",
      "sudo usermod -aG docker abhi",
      "sudo apt-get install -y snapd curl git",
      "sudo snap install microk8s --classic --channel=1.34/stable",
      "sudo usermod -aG microk8s $USER",
      "sudo chown -f -R $USER ~/.kube",
      "newgrp microk8s",
      "sudo microk8s enable dns dashboard ingress registry",
      "sudo microk8s kubectl get nodes",
      "sudo apt install -y kubectl helm",
      "echo       'Tools installed successfully!'     "
    ]
  }
}
